Make guid unchangeable
Since CVE-2011-4815 object.hash differs between different runs of Ruby

--- a/views/rss.haml
+++ b/views/rss.haml
@@ -13,5 +13,5 @@
         -if event.url
           %link= event.url
         %pubDate= event.created_at.strftime("%a, %d %b %Y %H:%M:%S %z")
-        %guid{:isPermaLink => "false"}= event.id.to_s.hash
+        %guid{:isPermaLink => "false"}= event.id
 
