Add the ability to write clan "descriptions".
1) Added new property to clan DB model, "description", maximum 500
   characters.

2) Modified clan view to show the description, and if you are an admin
   of the clan, a form to update the description.

3) Some CSS to make it look nice.

I did this to test it:

1) That adding HTML code to the description like "<p>test</p>" is
   escaped properly.
2) SQL injections don't work.
3) The page looks okay on Firefox when both logged in and logged out.
4) Adding empty description does not crash anything.
5) Looked at the page in Firefox, Chrome and Safari to make sure it
   isn't broken on any of these browsers.

--- a/public/style.css
+++ b/public/style.css
@@ -735,6 +735,16 @@ th.competition_placing {
     background-color: #dadada;
     text-decoration: none;
 }
+#clan_description {
+    border-bottom: 3px double #bbb;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+#clan_description_input form {
+    border-bottom: 3px double #bbb;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
 /**************************
 **                       **
 ** Display trophy images **
